Fix storage test

--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_filesystem_scenarios.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_adls_filesystem_scenarios.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 10:58:03 GMT
+      - Wed, 24 Feb 2021 06:36:23 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11991'
+      - '11997'
     status:
       code: 200
       message: OK
@@ -65,9 +65,9 @@ interactions:
       ParameterSetName:
       - -n -g -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 10:58:03 GMT
+      - Wed, 24 Feb 2021 06:36:23 GMT
       expires:
       - '-1'
       pragma:
@@ -95,7 +95,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11991'
+      - '11995'
     status:
       code: 200
       message: OK
@@ -113,9 +113,9 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:04 GMT
+      - Wed, 24 Feb 2021 06:36:24 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -123,14 +123,14 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>ContainerNotFound</Code><Message>The
-        specified container does not exist.\nRequestId:08e9b807-901e-0014-0277-071d05000000\nTime:2021-02-20T10:58:06.6516888Z</Message></Error>"
+        specified container does not exist.\nRequestId:e49caf5d-301e-0049-0a77-0a0203000000\nTime:2021-02-24T06:36:27.2409988Z</Message></Error>"
     headers:
       content-length:
       - '225'
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 10:58:06 GMT
+      - Wed, 24 Feb 2021 06:36:27 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-error-code:
@@ -156,11 +156,11 @@ interactions:
       ParameterSetName:
       - -n --public-access --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-blob-public-access:
       - blob
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:06 GMT
+      - Wed, 24 Feb 2021 06:36:27 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -172,11 +172,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:28 GMT
       etag:
-      - '"0x8D8D58E67D8218A"'
+      - '"0x8D8D88E83FAF3F3"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -198,9 +198,9 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:29 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -212,11 +212,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:29 GMT
       etag:
-      - '"0x8D8D58E67D8218A"'
+      - '"0x8D8D88E83FAF3F3"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -252,9 +252,9 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:08 GMT
+      - Wed, 24 Feb 2021 06:36:30 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -266,11 +266,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:09 GMT
+      - Wed, 24 Feb 2021 06:36:30 GMT
       etag:
-      - '"0x8D8D58E67D8218A"'
+      - '"0x8D8D88E83FAF3F3"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:07 GMT
+      - Wed, 24 Feb 2021 06:36:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -308,11 +308,11 @@ interactions:
       ParameterSetName:
       - -n --public-access --connection-string
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-blob-public-access:
       - container
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:10 GMT
+      - Wed, 24 Feb 2021 06:36:31 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -324,11 +324,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:10 GMT
+      - Wed, 24 Feb 2021 06:36:32 GMT
       etag:
-      - '"0x8D8D58E69D1CF5F"'
+      - '"0x8D8D88E864F6281"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:11 GMT
+      - Wed, 24 Feb 2021 06:36:32 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -350,9 +350,9 @@ interactions:
       ParameterSetName:
       - -n --connection-string
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:11 GMT
+      - Wed, 24 Feb 2021 06:36:32 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -364,11 +364,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:11 GMT
+      - Wed, 24 Feb 2021 06:36:33 GMT
       etag:
-      - '"0x8D8D58E69D1CF5F"'
+      - '"0x8D8D88E864F6281"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:11 GMT
+      - Wed, 24 Feb 2021 06:36:32 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-public-access:
@@ -406,9 +406,9 @@ interactions:
       ParameterSetName:
       - -n --public-access --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:12 GMT
+      - Wed, 24 Feb 2021 06:36:33 GMT
       x-ms-version:
       - '2020-02-10'
     method: PUT
@@ -420,11 +420,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:12 GMT
+      - Wed, 24 Feb 2021 06:36:33 GMT
       etag:
-      - '"0x8D8D58E6B262442"'
+      - '"0x8D8D88E87BBA7AE"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:13 GMT
+      - Wed, 24 Feb 2021 06:36:34 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -446,9 +446,9 @@ interactions:
       ParameterSetName:
       - -n --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:13 GMT
+      - Wed, 24 Feb 2021 06:36:35 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -460,11 +460,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:13 GMT
+      - Wed, 24 Feb 2021 06:36:35 GMT
       etag:
-      - '"0x8D8D58E6B262442"'
+      - '"0x8D8D88E87BBA7AE"'
       last-modified:
-      - Sat, 20 Feb 2021 10:58:13 GMT
+      - Wed, 24 Feb 2021 06:36:34 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-default-encryption-scope:
@@ -498,9 +498,9 @@ interactions:
       ParameterSetName:
       - --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.6.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.6.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:14 GMT
+      - Wed, 24 Feb 2021 06:36:36 GMT
       x-ms-version:
       - '2020-02-10'
     method: GET
@@ -508,16 +508,16 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\"><Containers><Container><Name>filesystem000005</Name><Properties><Last-Modified>Sat,
-        20 Feb 2021 10:58:13 GMT</Last-Modified><Etag>\"0x8D8D58E6B262442\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000004</Name><Properties><Last-Modified>Sat,
-        20 Feb 2021 10:58:11 GMT</Last-Modified><Etag>\"0x8D8D58E69D1CF5F\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>container</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000003</Name><Properties><Last-Modified>Sat,
-        20 Feb 2021 10:58:07 GMT</Last-Modified><Etag>\"0x8D8D58E67D8218A\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>blob</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container></Containers><NextMarker
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\"><Containers><Container><Name>filesystem000005</Name><Properties><Last-Modified>Wed,
+        24 Feb 2021 06:36:34 GMT</Last-Modified><Etag>\"0x8D8D88E87BBA7AE\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000003</Name><Properties><Last-Modified>Wed,
+        24 Feb 2021 06:36:28 GMT</Last-Modified><Etag>\"0x8D8D88E83FAF3F3\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>blob</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container><Container><Name>filesystem000004</Name><Properties><Last-Modified>Wed,
+        24 Feb 2021 06:36:32 GMT</Last-Modified><Etag>\"0x8D8D88E864F6281\"</Etag><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><PublicAccess>container</PublicAccess><DefaultEncryptionScope>$account-encryption-key</DefaultEncryptionScope><DenyEncryptionScopeOverride>false</DenyEncryptionScopeOverride><HasImmutabilityPolicy>false</HasImmutabilityPolicy><HasLegalHold>false</HasLegalHold></Properties></Container></Containers><NextMarker
         /></EnumerationResults>"
     headers:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 10:58:14 GMT
+      - Wed, 24 Feb 2021 06:36:36 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -543,9 +543,9 @@ interactions:
       ParameterSetName:
       - -n -y --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:15 GMT
+      - Wed, 24 Feb 2021 06:36:37 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -557,7 +557,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:16 GMT
+      - Wed, 24 Feb 2021 06:36:38 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -581,9 +581,9 @@ interactions:
       ParameterSetName:
       - -n -y --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:16 GMT
+      - Wed, 24 Feb 2021 06:36:38 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -595,7 +595,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:16 GMT
+      - Wed, 24 Feb 2021 06:36:39 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -619,9 +619,9 @@ interactions:
       ParameterSetName:
       - -n -y --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-dfs/12.2.0b1 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 10:58:17 GMT
+      - Wed, 24 Feb 2021 06:36:40 GMT
       x-ms-version:
       - '2020-02-10'
     method: DELETE
@@ -633,7 +633,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 10:58:18 GMT
+      - Wed, 24 Feb 2021 06:36:40 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
