--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_append.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 11:00:12 GMT
+      - Wed, 24 Feb 2021 06:37:04 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11989'
+      - '11992'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:13 GMT
+      - Wed, 24 Feb 2021 06:37:04 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:37:06 GMT
       etag:
-      - '"0x8D8D58EB436E788"'
+      - '"0x8D8D88E9B01EEB3"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:37:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -89,9 +89,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:37:07 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -101,7 +101,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -123,11 +123,11 @@ interactions:
       If-None-Match:
       - '*'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - AppendBlob
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -139,11 +139,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       etag:
-      - '"0x8D8D58EB5045B2C"'
+      - '"0x8D8D88E9C04F5AB"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -161,9 +161,9 @@ interactions:
       Content-Length:
       - '1024'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -177,11 +177,11 @@ interactions:
       content-md5:
       - DzQ7CTESaiDxM9Z8KwGKOw==
       date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       etag:
-      - '"0x8D8D58EB52C5C95"'
+      - '"0x8D8D88E9C2CF747"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:09 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-append-offset:
@@ -209,9 +209,9 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:09 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -219,9 +219,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Sat,
-        20 Feb 2021 11:00:17 GMT</Creation-Time><Last-Modified>Sat, 20 Feb 2021 11:00:17
-        GMT</Last-Modified><Etag>0x8D8D58EB52C5C95</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Wed,
+        24 Feb 2021 06:37:08 GMT</Creation-Time><Last-Modified>Wed, 24 Feb 2021 06:37:09
+        GMT</Last-Modified><Etag>0x8D8D88E9C2CF747</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5 /><Cache-Control /><Content-Disposition
         /><BlobType>AppendBlob</BlobType><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -229,7 +229,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:37:09 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -245,9 +245,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:37:10 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -263,11 +263,11 @@ interactions:
       content-type:
       - application/octet-stream
       date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:37:10 GMT
       etag:
-      - '"0x8D8D58EB52C5C95"'
+      - '"0x8D8D88E9C2CF747"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:09 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-blob-committed-block-count:
@@ -275,7 +275,7 @@ interactions:
       x-ms-blob-type:
       - AppendBlob
       x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:37:08 GMT
       x-ms-lease-state:
       - available
       x-ms-lease-status:
@@ -295,9 +295,9 @@ interactions:
       If-None-Match:
       - '*'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:37:11 GMT
       x-ms-version:
       - '2018-11-09'
     method: HEAD
@@ -307,7 +307,7 @@ interactions:
       string: ''
     headers:
       date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:37:10 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
