--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_lease_oauth.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 11:02:36 GMT
+      - Wed, 24 Feb 2021 06:54:22 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11990'
+      - '11994'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:02:36 GMT
+      - Wed, 24 Feb 2021 06:54:23 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:02:38 GMT
+      - Wed, 24 Feb 2021 06:54:25 GMT
       etag:
-      - '"0x8D8D58F09BF9122"'
+      - '"0x8D8D891062BD0B5"'
       last-modified:
-      - Sat, 20 Feb 2021 11:02:39 GMT
+      - Wed, 24 Feb 2021 06:54:25 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,506 +91,34 @@ interactions:
       Content-Length:
       - '131072'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Sat, 20 Feb 2021 11:02:39 GMT
+      - Wed, 24 Feb 2021 06:54:27 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
     uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
   response:
     body:
-      string: ''
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><Error><Code>AuthorizationPermissionMismatch</Code><Message>This
+        request is not authorized to perform this operation using this permission.\nRequestId:b8a7f3e0-f01e-0008-0c79-0a04ec000000\nTime:2021-02-24T06:54:29.0413860Z</Message></Error>"
     headers:
       content-length:
-      - '0'
-      content-md5:
-      - DfvoqkwgtS4bi/PLbL3xkw==
+      - '279'
+      content-type:
+      - application/xml
       date:
-      - Sat, 20 Feb 2021 11:02:40 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
+      - Wed, 24 Feb 2021 06:54:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-request-server-encrypted:
-      - 'true'
+      x-ms-error-code:
+      - AuthorizationPermissionMismatch
       x-ms-version:
       - '2018-11-09'
     status:
-      code: 201
-      message: Created
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob lease acquire
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - --lease-duration -b -c --account-name --proposed-lease-id -o --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      x-ms-lease-action:
-      - acquire
-      x-ms-lease-duration:
-      - '60'
-      x-ms-proposed-lease-id:
-      - abcdabcd-abcd-abcd-abcd-abcdabcdabcd
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=lease
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-lease-id:
-      - abcdabcd-abcd-abcd-abcd-abcdabcdabcd
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 201
-      message: Created
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -n -c --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:42 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '131072'
-      content-md5:
-      - DfvoqkwgtS4bi/PLbL3xkw==
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:42 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-blob-type:
-      - BlockBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      x-ms-lease-duration:
-      - fixed
-      x-ms-lease-state:
-      - leased
-      x-ms-lease-status:
-      - locked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob lease change
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -b -c --lease-id --proposed-lease-id --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:43 GMT
-      x-ms-lease-action:
-      - change
-      x-ms-lease-id:
-      - abcdabcd-abcd-abcd-abcd-abcdabcdabcd
-      x-ms-proposed-lease-id:
-      - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=lease
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:43 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-lease-id:
-      - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob lease renew
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -b -c --lease-id --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:44 GMT
-      x-ms-lease-action:
-      - renew
-      x-ms-lease-id:
-      - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=lease
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:45 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-lease-id:
-      - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -n -c --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:45 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '131072'
-      content-md5:
-      - DfvoqkwgtS4bi/PLbL3xkw==
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:46 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-blob-type:
-      - BlockBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      x-ms-lease-duration:
-      - fixed
-      x-ms-lease-state:
-      - leased
-      x-ms-lease-status:
-      - locked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob lease break
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -b -c --lease-break-period --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:46 GMT
-      x-ms-lease-action:
-      - break
-      x-ms-lease-break-period:
-      - '30'
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=lease
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:47 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-lease-time:
-      - '30'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 202
-      message: Accepted
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -n -c --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:48 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '131072'
-      content-md5:
-      - DfvoqkwgtS4bi/PLbL3xkw==
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:48 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-blob-type:
-      - BlockBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      x-ms-lease-state:
-      - breaking
-      x-ms-lease-status:
-      - locked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob lease release
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -b -c --lease-id --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:49 GMT
-      x-ms-lease-action:
-      - release
-      x-ms-lease-id:
-      - dcbadcba-dcba-dcba-dcba-dcbadcbadcba
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=lease
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:49 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -n -c --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:50 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '131072'
-      content-md5:
-      - DfvoqkwgtS4bi/PLbL3xkw==
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:51 GMT
-      etag:
-      - '"0x8D8D58F0AD333D0"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-blob-type:
-      - BlockBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:41 GMT
-      x-ms-lease-state:
-      - available
-      x-ms-lease-status:
-      - unlocked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
+      code: 403
+      message: This request is not authorized to perform this operation using this
+        permission.
 version: 1
