--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_soft_delete.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_blob_soft_delete.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 11:00:13 GMT
+      - Wed, 24 Feb 2021 06:37:59 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11986'
+      - '11995'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:14 GMT
+      - Wed, 24 Feb 2021 06:38:00 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:00:14 GMT
+      - Wed, 24 Feb 2021 06:38:02 GMT
       etag:
-      - '"0x8D8D58EB3FDC4BB"'
+      - '"0x8D8D88EBC4C66F5"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:38:02 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,11 +91,11 @@ interactions:
       Content-Length:
       - '1024'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-blob-type:
       - BlockBlob
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:38:03 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -109,11 +109,11 @@ interactions:
       content-md5:
       - DzQ7CTESaiDxM9Z8KwGKOw==
       date:
-      - Sat, 20 Feb 2021 11:00:15 GMT
+      - Wed, 24 Feb 2021 06:38:04 GMT
       etag:
-      - '"0x8D8D58EB49C2BDC"'
+      - '"0x8D8D88EBD29CCF8"'
       last-modified:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:38:04 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-request-server-encrypted:
@@ -137,9 +137,9 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:38:04 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -147,9 +147,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Sat,
-        20 Feb 2021 11:00:16 GMT</Creation-Time><Last-Modified>Sat, 20 Feb 2021 11:00:16
-        GMT</Last-Modified><Etag>0x8D8D58EB49C2BDC</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Wed,
+        24 Feb 2021 06:38:04 GMT</Creation-Time><Last-Modified>Wed, 24 Feb 2021 06:38:04
+        GMT</Last-Modified><Etag>0x8D8D88EBD29CCF8</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -157,7 +157,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:16 GMT
+      - Wed, 24 Feb 2021 06:38:04 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -173,9 +173,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:17 GMT
+      - Wed, 24 Feb 2021 06:38:05 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -188,7 +188,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:38:06 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -208,9 +208,9 @@ interactions:
       Content-Length:
       - '176'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:38:06 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -222,7 +222,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:38:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -236,9 +236,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:38:07 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -251,7 +251,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:18 GMT
+      - Wed, 24 Feb 2021 06:38:07 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -267,9 +267,9 @@ interactions:
       Connection:
       - keep-alive
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:38:08 GMT
       x-ms-version:
       - '2018-11-09'
     method: GET
@@ -282,7 +282,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:19 GMT
+      - Wed, 24 Feb 2021 06:38:08 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -300,9 +300,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:30 GMT
+      - Wed, 24 Feb 2021 06:38:19 GMT
       x-ms-version:
       - '2018-11-09'
     method: DELETE
@@ -314,7 +314,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:00:30 GMT
+      - Wed, 24 Feb 2021 06:38:20 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-delete-type-permanent:
@@ -338,9 +338,9 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 11:00:31 GMT
+      - Wed, 24 Feb 2021 06:38:20 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -354,7 +354,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:00:31 GMT
+      - Wed, 24 Feb 2021 06:38:21 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -378,9 +378,9 @@ interactions:
       ParameterSetName:
       - -c --include --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 11:01:02 GMT
+      - Wed, 24 Feb 2021 06:38:51 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -388,18 +388,18 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Deleted>true</Deleted><Properties><Creation-Time>Sat,
-        20 Feb 2021 11:00:16 GMT</Creation-Time><Last-Modified>Sat, 20 Feb 2021 11:00:16
-        GMT</Last-Modified><Etag>0x8D8D58EB49C2BDC</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Deleted>true</Deleted><Properties><Creation-Time>Wed,
+        24 Feb 2021 06:38:04 GMT</Creation-Time><Last-Modified>Wed, 24 Feb 2021 06:38:04
+        GMT</Last-Modified><Etag>0x8D8D88EBD29CCF8</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
-        /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><ServerEncrypted>true</ServerEncrypted><DeletedTime>Sat,
-        20 Feb 2021 11:00:31 GMT</DeletedTime><RemainingRetentionDays>1</RemainingRetentionDays></Properties><OrMetadata
+        /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><ServerEncrypted>true</ServerEncrypted><DeletedTime>Wed,
+        24 Feb 2021 06:38:20 GMT</DeletedTime><RemainingRetentionDays>1</RemainingRetentionDays></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
     headers:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:01:03 GMT
+      - Wed, 24 Feb 2021 06:38:52 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
@@ -417,9 +417,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:01:03 GMT
+      - Wed, 24 Feb 2021 06:38:52 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -431,7 +431,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:01:03 GMT
+      - Wed, 24 Feb 2021 06:38:53 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -453,9 +453,9 @@ interactions:
       ParameterSetName:
       - -c --account-name --account-key
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
       x-ms-date:
-      - Sat, 20 Feb 2021 11:01:04 GMT
+      - Wed, 24 Feb 2021 06:38:54 GMT
       x-ms-version:
       - '2019-12-12'
     method: GET
@@ -463,9 +463,9 @@ interactions:
   response:
     body:
       string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?><EnumerationResults
-        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Sat,
-        20 Feb 2021 11:00:16 GMT</Creation-Time><Last-Modified>Sat, 20 Feb 2021 11:00:16
-        GMT</Last-Modified><Etag>0x8D8D58EB49C2BDC</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
+        ServiceEndpoint=\"https://clitest000002.blob.core.windows.net/\" ContainerName=\"cont000003\"><MaxResults>5000</MaxResults><Blobs><Blob><Name>blob000004</Name><Properties><Creation-Time>Wed,
+        24 Feb 2021 06:38:04 GMT</Creation-Time><Last-Modified>Wed, 24 Feb 2021 06:38:04
+        GMT</Last-Modified><Etag>0x8D8D88EBD29CCF8</Etag><Content-Length>1024</Content-Length><Content-Type>application/octet-stream</Content-Type><Content-Encoding
         /><Content-Language /><Content-CRC64 /><Content-MD5>DzQ7CTESaiDxM9Z8KwGKOw==</Content-MD5><Cache-Control
         /><Content-Disposition /><BlobType>BlockBlob</BlobType><AccessTier>Hot</AccessTier><AccessTierInferred>true</AccessTierInferred><LeaseStatus>unlocked</LeaseStatus><LeaseState>available</LeaseState><ServerEncrypted>true</ServerEncrypted></Properties><OrMetadata
         /></Blob></Blobs><NextMarker /></EnumerationResults>"
@@ -473,7 +473,7 @@ interactions:
       content-type:
       - application/xml
       date:
-      - Sat, 20 Feb 2021 11:01:05 GMT
+      - Wed, 24 Feb 2021 06:38:54 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       transfer-encoding:
