--- a/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier_oauth.yaml
+++ b/src/azure-cli/azure/cli/command_modules/storage/tests/latest/recordings/test_storage_page_blob_set_tier_oauth.yaml
@@ -15,9 +15,9 @@ interactions:
       ParameterSetName:
       - -n -g --query -o
       User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
+      - AZURECLI/2.19.1 azsdk-python-azure-mgmt-storage/17.0.0 Python/3.7.4 (Windows-10-10.0.19041-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2021-01-01&$expand=kerb
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Storage/storageAccounts/clitest000002/listKeys?api-version=2019-06-01&$expand=kerb
   response:
     body:
       string: '{"keys":[{"keyName":"key1","value":"veryFakedStorageAccountKey==","permissions":"FULL"},{"keyName":"key2","value":"veryFakedStorageAccountKey==","permissions":"FULL"}]}'
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json
       date:
-      - Sat, 20 Feb 2021 11:02:48 GMT
+      - Wed, 24 Feb 2021 06:55:24 GMT
       expires:
       - '-1'
       pragma:
@@ -45,7 +45,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-resource-requests:
-      - '11984'
+      - '11990'
     status:
       code: 200
       message: OK
@@ -57,9 +57,9 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-date:
-      - Sat, 20 Feb 2021 11:02:49 GMT
+      - Wed, 24 Feb 2021 06:55:25 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
@@ -71,11 +71,11 @@ interactions:
       content-length:
       - '0'
       date:
-      - Sat, 20 Feb 2021 11:02:51 GMT
+      - Wed, 24 Feb 2021 06:55:27 GMT
       etag:
-      - '"0x8D8D58F116561FB"'
+      - '"0x8D8D8912B747093"'
       last-modified:
-      - Sat, 20 Feb 2021 11:02:52 GMT
+      - Wed, 24 Feb 2021 06:55:28 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
       x-ms-version:
@@ -91,7 +91,7 @@ interactions:
       Content-Length:
       - '0'
       User-Agent:
-      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.7; Windows 10) AZURECLI/2.19.1
+      - Azure-Storage/2.0.0-2.0.1 (Python CPython 3.7.4; Windows 10) AZURECLI/2.19.1
       x-ms-access-tier:
       - P10
       x-ms-blob-content-length:
@@ -99,274 +99,30 @@ interactions:
       x-ms-blob-type:
       - PageBlob
       x-ms-date:
-      - Sat, 20 Feb 2021 11:02:54 GMT
+      - Wed, 24 Feb 2021 06:55:30 GMT
       x-ms-version:
       - '2018-11-09'
     method: PUT
     uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
   response:
     body:
-      string: ''
+      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<Error><Code>AuthorizationPermissionMismatch</Code><Message>This
+        request is not authorized to perform this operation using this permission.\nRequestId:2338dc10-f01c-00d1-5b7a-0af127000000\nTime:2021-02-24T06:55:32.2603504Z</Message></Error>"
     headers:
       content-length:
-      - '0'
+      - '280'
+      content-type:
+      - application/xml
       date:
-      - Sat, 20 Feb 2021 11:02:54 GMT
-      etag:
-      - '"0x8D8D58F1314ADF3"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:55 GMT
+      - Wed, 24 Feb 2021 06:55:31 GMT
       server:
       - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-request-server-encrypted:
-      - 'true'
+      x-ms-error-code:
+      - AuthorizationPermissionMismatch
       x-ms-version:
       - '2018-11-09'
     status:
-      code: 201
-      message: Created
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -c -n --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '16384'
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      etag:
-      - '"0x8D8D58F1314ADF3"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-access-tier:
-      - P10
-      x-ms-blob-sequence-number:
-      - '0'
-      x-ms-blob-type:
-      - PageBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      x-ms-lease-state:
-      - available
-      x-ms-lease-status:
-      - unlocked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -c -n --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:56 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: GET
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=pagelist
-  response:
-    body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<PageList/>"
-    headers:
-      content-type:
-      - application/xml
-      date:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      etag:
-      - '"0x8D8D58F1314ADF3"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      transfer-encoding:
-      - chunked
-      x-ms-blob-content-length:
-      - '16384'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob set-tier
-      Connection:
-      - keep-alive
-      Content-Length:
-      - '0'
-      ParameterSetName:
-      - -c -n --tier -t --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-access-tier:
-      - P20
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:56 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: PUT
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=tier
-  response:
-    body:
-      string: ''
-    headers:
-      content-length:
-      - '0'
-      date:
-      - Sat, 20 Feb 2021 11:02:57 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - '*/*'
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -c -n --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:57 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: HEAD
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004
-  response:
-    body:
-      string: ''
-    headers:
-      accept-ranges:
-      - bytes
-      content-length:
-      - '16384'
-      content-type:
-      - application/octet-stream
-      date:
-      - Sat, 20 Feb 2021 11:02:58 GMT
-      etag:
-      - '"0x8D8D58F1314ADF3"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      x-ms-access-tier:
-      - P20
-      x-ms-blob-sequence-number:
-      - '0'
-      x-ms-blob-type:
-      - PageBlob
-      x-ms-creation-time:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      x-ms-lease-state:
-      - available
-      x-ms-lease-status:
-      - unlocked
-      x-ms-server-encrypted:
-      - 'true'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/xml
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
-      - storage blob show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -c -n --account-name --auth-mode
-      User-Agent:
-      - AZURECLI/2.19.1 azsdk-python-storage-blob/12.4.0 Python/3.7.7 (Windows-10-10.0.19041-SP0)
-      x-ms-date:
-      - Sat, 20 Feb 2021 11:02:58 GMT
-      x-ms-version:
-      - '2019-12-12'
-    method: GET
-    uri: https://clitest000002.blob.core.windows.net/cont000003/blob000004?comp=pagelist
-  response:
-    body:
-      string: "\uFEFF<?xml version=\"1.0\" encoding=\"utf-8\"?>\n<PageList/>"
-    headers:
-      content-type:
-      - application/xml
-      date:
-      - Sat, 20 Feb 2021 11:02:59 GMT
-      etag:
-      - '"0x8D8D58F1314ADF3"'
-      last-modified:
-      - Sat, 20 Feb 2021 11:02:55 GMT
-      server:
-      - Windows-Azure-Blob/1.0 Microsoft-HTTPAPI/2.0
-      transfer-encoding:
-      - chunked
-      x-ms-blob-content-length:
-      - '16384'
-      x-ms-version:
-      - '2019-12-12'
-    status:
-      code: 200
-      message: OK
+      code: 403
+      message: This request is not authorized to perform this operation using this
+        permission.
 version: 1
